- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P1: Critical
 - 
    6.9.3, 6.10.0 RC
 
- 
        
 - 
        f5308a9bd (dev), 491ac58e3 (6.10), 753a7d708 (tqtc/lts-6.8), 8d7042c9d (tqtc/lts-6.5)
 - 
        2025wk40s2-3QtforAndroid, 2025wk42s3QtforAndroid
 
Android software keyboard does not work properly in landscape mode, more specifically when in landscape mode and the extracted textfield is showing. The extracted textfield does not display anything when the keyboard is opened, even though the underlying textfield has content in it.
Content appears if hardware key is pressed and then keyboard opened again, or when opening the keyboard in portrait and rotating the device while it is already opened.
- is duplicated by
 - 
                    
QTBUG-140541 Soft Keyboard: On landscape mode, edited text is not visible.
-         
 - Closed
 
 -