Android: don't check keyboard visibility in hasValidFocusObject()

Don't check for keyboard visibility when checking for a valid focus
object under QAndroidInputContext before running actions on the
Android thread. because the keyboard is not immediately visible
after being reqeusted, some actions might end up being dropped
at the beginning, and the other checks we have already should
cover cases to avoid calling those actions on non-valid input
object.

Partially reverts c8a1e7bb37863ccf1d5859f36841a350060aaddf.

Fixes: QTBUG-140856
Pick-to: 6.8 6.5
Change-Id: Ic3bc43f50aa0ef9ac46b4bb2e490c8be5d560619
Reviewed-by: Konsta Alajärvi <konsta.alajarvi@qt.io>
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>
(cherry picked from commit f5308a9bdde3eded95ea916f85c46f9c6ad9d402)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>