src/plugins/platforms/android/qandroidinputcontext.cpp
@@ -82,9 +82,6 @@ static bool hasValidFocusObject()
     if (!m_androidInputContext)
         return false;
 
-    if (!m_androidInputContext->isInputPanelVisible())
-        return false;
-
     const auto focusObject = m_androidInputContext->focusObject();
     if (!focusObject)
         return false;
